# Clutch-data-collection

./: CMakeLists.txt  README.md
include/: nfl_data_collector.h
src/: main.cpp  nfl_data_collector.cpp
